working on intertwine, testana bugfix